--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,10 +1,17 @@
-.card {
-    padding:  5px;
-    cursor: pointer;
+.card{
+    display: flex;
+    padding: 0 10px 0 10px;
+    cursor: grab;
     background-color: white;
     margin: 0 10px 10px 10px;
     border-radius: 5px;
     box-shadow: 0px 1px 5px rgb(126, 123, 123);
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+
+.card__title {
     font-size: medium;
     font-weight: 500;
 }
@@ -12,3 +19,15 @@
 .card:hover {
     box-shadow: 0px 1px 5px rgb(172, 172, 172);
 }
+
+.card__delition {
+    box-sizing: border-box;
+    cursor: pointer;
+   background-color: transparent;
+
+}
+
+.card__delition:hover ~ .card h2{
+   background-color: red;
+}
+
