--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -9,25 +9,28 @@
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
+
+    &__title {
+        font-size: medium;
+        font-weight: 500;
+    }
+    
+    &:hover {
+        box-shadow: 0px 1px 5px rgb(172, 172, 172);
+    }
+    
+    &__delition {
+        box-sizing: border-box;
+        cursor: pointer;
+        background-color: transparent;
+        display: none;
+        transition: 0.9 ease;
+    }
+
+    &:hover .card__delition {
+        display: block;
+        transition: 0.9 ease;
+    }
 }
 
-.card__title {
-    font-size: medium;
-    font-weight: 500;
-}
-
-.card:hover {
-    box-shadow: 0px 1px 5px rgb(172, 172, 172);
-}
-
-.card__delition {
-    box-sizing: border-box;
-    cursor: pointer;
-   background-color: transparent;
-
-}
-
-.card__delition:hover ~ .card h2{
-   background-color: red;
-}
 
