--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -3,7 +3,7 @@
     background-color: #EBECF0;
     border-radius: 8px;
     padding-bottom: 5px;
-    height: 100%;
     margin: 10px 0 10px 10px;
     cursor: grab;
+    box-sizing:border-box;
 }
