--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,14 @@
-.root {
+.app__container {
   display: flex;
   flex-direction: row;
+  width: 100vw;
+  height: 100vh;
+  background-image: url('../src/img/bgr.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @media screen and (max-width: 820px) {
+    flex-direction: column;
+    padding-left: 15%;
+}
 }
