--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,14 +1,15 @@
 .card{
     display: flex;
     padding: 0 10px 0 10px;
-    cursor: grab;
-    background-color: white;
+    cursor: pointer;
+    background-color: rgb(246, 197, 171);
     margin: 0 10px 10px 10px;
     border-radius: 5px;
     box-shadow: 0px 1px 5px rgb(126, 123, 123);
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
+    height: 40px;
 
     &__title {
         font-size: medium;
