--- a/src/components/Input/InputCard.scss
+++ b/src/components/Input/InputCard.scss
@@ -4,11 +4,11 @@
 
     &__input {
         box-shadow: 0px 1px 3px rgb(133, 132, 132);
-        width: 100%;
+        width: 80%;
         margin: 0 10px 0 10px;
         border-radius: 5px;
         border: none;
-        background-color: white;
+        background-color: rgb(246, 197, 171);
         outline: none;
         font-weight: 400;    
         font-size: medium;
@@ -25,8 +25,9 @@
         border: none;
         cursor: pointer;
         border-radius: 5px;
-        background-color: rgba(26, 129, 11, 0.3);
+        background-color: rgba(29, 192, 223, 0.3);
         margin: 0 10px 0 10px;
+        padding: 0 5px 0 5px;
         color: white;
         transition: .2s ease;
         box-shadow: 0px 1px 4px rgb(133, 132, 132);
