--- a/src/components/Input/InputItem.scss
+++ b/src/components/Input/InputItem.scss
@@ -1,5 +1,5 @@
 .input-item {
-    display: flex;
+    // display: flex;
     align-items: center;
     cursor: pointer;
     margin: 10px;
@@ -13,6 +13,11 @@
             font-size: large;
             font-weight: 600;
             padding: 5px 5px 5px 10px;
+        }
+
+        @media screen and (max-width: 820px) {
+            display: block;
+            width: 80%;
         }
 }
 
