--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -1,9 +1,14 @@
 .list {
     width: 300px;
-    background-color: #EBECF0;
+    background-color: rgba(155, 156, 198, 0.253);
     border-radius: 8px;
-    padding-bottom: 5px;
+    padding-bottom: 15px;
     margin: 10px 0 10px 10px;
-    cursor: grab;
+    cursor: pointer;
     box-sizing:border-box;
+
+    @media screen and (max-width: 820px) {
+        width: 80%;
+        height: 35vh;
+    }
 }
