--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -1,4 +1,3 @@
-
 .title {
     display: flex;
     justify-content: space-between;
@@ -35,6 +34,9 @@
     
     &__icon {
        cursor: pointer; 
+       height: 18px;
+       width: 18px;
+       margin: 5px 5px 0 0;
     }
 }
 
