--- a/src/components/Input/InputItem.scss
+++ b/src/components/Input/InputItem.scss
@@ -8,14 +8,16 @@
     transition: .3s ease;
     height: 40px;
     width: 280px;
+    backdrop-filter: blur(2px);
     
         &__text {
             font-size: large;
             font-weight: 600;
             padding: 5px 5px 5px 10px;
+            
         }
 
-        @media screen and (max-width: 820px) {
+        @media screen and (max-width: 900px) {
             display: block;
             width: 80%;
         }
